--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "jsdom": "^15.2.1",
+    "request": "^2.88.2",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
